--- a/inventory.html
+++ b/inventory.html
@@ -102,7 +102,7 @@
     </div>
     <nav>
       <a href="MEDIHUB.html" target="_blank">Home</a>
-      <a href="profile.html" target="_blank">Settings</a>
+      <a href="profile.html" target="_blank">User Profile</a>
       <a href="inventory.html" target="_blank">Inventory</a>
     </nav>
   </header>
